[gd_scene load_steps=7 format=3 uid="uid://cjhckq81ncmai"]

[ext_resource type="Script" path="res://scripts/main-menu/level_selection.gd" id="1_cfii3"]
[ext_resource type="Texture2D" uid="uid://yhxmehogb3u6" path="res://assets/main-menu/level-select.png" id="2_1xkvt"]
[ext_resource type="Theme" uid="uid://bi0ijr5h3wj85" path="res://themes/main menu/buttons2.tres" id="3_4uy8r"]
[ext_resource type="Texture2D" uid="uid://djhjjecsbwhm8" path="res://assets/lava-assets/lavaplanet.png" id="4_7hb0o"]
[ext_resource type="Texture2D" uid="uid://boqedatutenav" path="res://assets/main-menu/rockwater.png" id="5_265lk"]
[ext_resource type="Texture2D" uid="uid://bk1dsbjc8fvko" path="res://assets/main-menu/gas2.png" id="6_5hnth"]

[node name="level-selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfii3")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.997833)
texture = ExtResource("2_1xkvt")

[node name="Select-Exoplanet" type="Label" parent="."]
layout_mode = 2
offset_left = 491.064
offset_top = 220.0
offset_right = 1435.06
offset_bottom = 284.0
scale = Vector2(1, 1.00395)
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("3_4uy8r")
theme_override_font_sizes/font_size = 64
text = "Select Exoplanet"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00628, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 50

[node name="Lava" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -100

[node name="lava-planet" type="TextureButton" parent="VBoxContainer/HBoxContainer/Lava"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("4_7hb0o")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Lava"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_4uy8r")
text = "55 Cancri e
A lava world with sparkling skies"
horizontal_alignment = 1

[node name="Kepler" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -100

[node name="water-planet" type="TextureButton" parent="VBoxContainer/HBoxContainer/Kepler"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("5_265lk")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Kepler"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_4uy8r")
text = "Kepler-452 b
A potentially rocky world, larger than Earth"
horizontal_alignment = 1

[node name="HD" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -100

[node name="rocky-planet" type="TextureButton" parent="VBoxContainer/HBoxContainer/HD"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("6_5hnth")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HD"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_4uy8r")
text = "HD 189733 b
A giant planet where it rains glass"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Lava/lava-planet" to="." method="_on_lavaplanet_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Kepler/water-planet" to="." method="_on_waterplanet_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HD/rocky-planet" to="." method="_on_rockyplanet_pressed"]
